--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,18 @@ add_executable(test_undirectedgraphsearch graph/UndirectedGraphSearch.cpp graph/
 target_link_libraries(test_undirectedgraphsearch ${GTEST_BOTH_LIBRARIES})
 target_link_libraries(test_undirectedgraphsearch ${CMAKE_THREAD_LIBS_INIT})
 
+add_executable(test_DepthFirstSearch graph/DepthFirstSearch.cpp graph/test_DepthFirstSearch.cpp)
+target_link_libraries(test_DepthFirstSearch ${GTEST_BOTH_LIBRARIES})
+target_link_libraries(test_DepthFirstSearch ${CMAKE_THREAD_LIBS_INIT})
+
 add_test(Test test_undirectedgraph)
 add_test(Test test_directedgraph)
 add_test(Test test_linkedlist)
 add_test(Test test_avltree)
 add_test(Test test_undirectedgraphsearch)
+
+add_test(Test test_DepthFirstSearch)
+
 enable_testing()
 
 add_executable(class-schedule greedy/class-schedule.cpp)
