--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,5 +72,10 @@ enable_testing()
 
 add_executable(ListNode leetcode/ListNode/ListNode.cpp)
 add_executable(MyLinkedList leetcode/MyLinkedList/MyLinkedList.cpp leetcode/MyLinkedList/MyLinkedList.hpp)
+add_executable(maxValue leetcode/maxValue.cpp)
 #add_executable(class-schedule greedy/class-schedule.cpp)
 #add_executable(huffman-code greedy/huffman-code.cpp)
+add_executable(findContinuousSequence leetcode/findContinuousSequence.cpp)
+add_executable(findUniqChar leetcode/findUniqChar.cpp)
+add_executable(getLeastNumbers leetcode/getLeastNumbers.cpp)
+add_executable(nTossSum leetcode/nTossSum.cpp)
