add new solutions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,3 +79,5 @@ add_executable(findContinuousSequence leetcode/findContinuousSequence.cpp)
 add_executable(findUniqChar leetcode/findUniqChar.cpp)
 add_executable(getLeastNumbers leetcode/getLeastNumbers.cpp)
 add_executable(nTossSum leetcode/nTossSum.cpp)
+add_executable(validateStackSequence leetcode/validateStackSequence.cpp)
+add_executable(maxProfit leetcode/maxProfit.cpp)
