add new solutions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,3 +81,9 @@ add_executable(getLeastNumbers leetcode/getLeastNumbers.cpp)
 add_executable(nTossSum leetcode/nTossSum.cpp)
 add_executable(validateStackSequence leetcode/validateStackSequence.cpp)
 add_executable(maxProfit leetcode/maxProfit.cpp)
+add_executable(cuttingRope dynamic-programming/cuttingRope.cpp)
+add_executable(lastRemaining leetcode/lastRemaining.cpp)
+add_executable(MedianFinder leetcode/MedianFinder.cpp)
+add_executable(verifyPostOrder leetcode/verifyPostOrder.cpp)
+add_executable(rotateArrayMin array/rotateArrayMin.cpp)
+add_executable(lengthOfLongestSubstringNoDup leetcode/lengthOfLongestSubstringNoDup.cpp)
