--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,3 +87,4 @@ add_executable(MedianFinder leetcode/MedianFinder.cpp)
 add_executable(verifyPostOrder leetcode/verifyPostOrder.cpp)
 add_executable(rotateArrayMin array/rotateArrayMin.cpp)
 add_executable(lengthOfLongestSubstringNoDup leetcode/lengthOfLongestSubstringNoDup.cpp)
+add_executable(isValid leetcode/isValid.cpp)
